--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -4,5 +4,19 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "ConnectionStrings": {
+    "default": "[Connection String Goes Here]"
+  },
+
+  "Jwt": {
+    "Issuer": "[Issuer name or refrence goes here]",
+    "Key": "[Jwt key goes here]"
+  },
+
+  "GoogleAuthenticator": {
+    "Credential": "[Google credential goes here]",
+    "Key": "[Google key goes here]"
   }
 }
