--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "default": "[Connection String Goes Here]"
+    "default": "[Connection String goes here]"
   },
 
   "Jwt": {
@@ -18,5 +18,10 @@
   "GoogleAuthenticator": {
     "Credential": "[Google credential goes here]",
     "Key": "[Google key goes here]"
+  },
+
+  "Email": {
+    "Address": "[Your email goes here]",
+    "AccessKey": "[Your account access code here]"
   }
 }
